--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </aside>
 
 <main id="products"><div class="product">
-      <img src="nike1.jpg" onclick="openProduct(1)">
+      <img loading="lazy" src="nike1.jpg" onclick="openProduct(1)">
       <h4>Running Shoes</h4>
       <p>$50</p>
       <div class="selects">
@@ -43,7 +43,7 @@
       </div>
       <button onclick="addToCart(1, this);">Add to Cart</button>
     </div><div class="product">
-      <img src="https://via.placeholder.com/400x300?text=Tshirt+Front" onclick="openProduct(2)">
+      <img loading="lazy" src="https://via.placeholder.com/400x300?text=Tshirt+Front" onclick="openProduct(2)">
       <h4>T-Shirt</h4>
       <p>$20</p>
       <div class="selects">
@@ -52,7 +52,7 @@
       </div>
       <button onclick="addToCart(2, this);">Add to Cart</button>
     </div><div class="product">
-      <img src="https://via.placeholder.com/400x300?text=Cap+1" onclick="openProduct(3)">
+      <img loading="lazy" src="https://via.placeholder.com/400x300?text=Cap+1" onclick="openProduct(3)">
       <h4>Cap</h4>
       <p>$10</p>
       <div class="selects">
@@ -61,7 +61,7 @@
       </div>
       <button onclick="addToCart(3, this);">Add to Cart</button>
     </div><div class="product">
-      <img src="https://via.placeholder.com/400x300?text=Sneakers+1" onclick="openProduct(4)">
+      <img loading="lazy" src="https://via.placeholder.com/400x300?text=Sneakers+1" onclick="openProduct(4)">
       <h4>Sneakers</h4>
       <p>$60</p>
       <div class="selects">
