--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
 const products = [
   { id: 1, name: 'Nike AirForce 1', price: 500, category: 'shoes', images: ['nike1.jpg','nike2.jpg','nike3.jpg','nike4.jpg','nike5.jpg'], description: 'Sky Leather Imported Quality', colors:['White'], sizes:[42,43,44,45,46] },
   { id: 2, name: 'Adidas Campus', price: 450, category: 'shoes', images: ['adi1.jpg','adi2.jpg','adi3.jpg'], description: 'Rough leathrt material', colors:['Grey','Black'], sizes:[42,43,44,45,46] },
-  ,
-  { id: 3, name: 'Nike AirForce 1', price: 500, category: 'shoes', images: ['nikeb1.jpg','nikeb2.jpg','nikeb3.jpg'], description: 'Sky Leather Imported Quality', colors:['Black'], sizes:[42,43,44,45,46] }
+  { id: 3, name: 'Nike AirForce 1 Black', price: 500, category: 'shoes', images: ['nikeb1.jpg','nikeb2.jpg','nikeb3.jpg'], description: 'Sky Leather Imported Quality', colors:['Black'], sizes:[42,43,44,45,46] }
   
 ];
 
